Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="#pro">Projects</a></li>
       <li><a href="#con">Contact</a></li>
       <li>
-        <a href="/resume_1755850277.pdf" download="My resume"
+        <a href="./resume_1755850277.pdf" download="My resume"
           >Download resume</a
         >
       </li>
@@ -91,3 +91,4 @@
     <a href="#top">⬆️ Back to top</a>
   </body>
 </html>
+
